--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,15 +6,7 @@ services:
       - "8000:8000"
     volumes:
       - ./rentapi/src:/src
-    command:
-      [
-        "uvicorn",
-        "src.main:app",
-        "--host",
-        "0.0.0.0",
-        "--port",
-        "8000",
-      ]
+    command: ["uvicorn", "src.main:app", "--host", "0.0.0.0", "--port", "8000"]
     environment:
       - DB_HOST=db
       - DB_NAME=app
@@ -28,7 +20,7 @@ services:
     container_name: app
 
   db:
-    image: postgres:17.0-alpine3.20
+    image: postgres:17
     environment:
       - POSTGRES_DB=app
       - POSTGRES_USER=postgres
@@ -40,4 +32,3 @@ services:
 
 networks:
   backend:
-
